# tf2_bot_detector

./: .gitmodules  CHANGES.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-linux.yml  ccpp.yml  download_and_compile.yml  validate.yml
cmake/: init-preproject.cmake
staging/: launch_tf2bd_linux.sh
submodules/glad2/: CMakeLists.txt
submodules/glad2/include/glad/: gl.h
tf2_bot_detector/: Application.cpp  Application.h  BaseTextures.cpp  BaseTextures.h  BatchedAction.h  Bitmap.cpp  CMakeLists.txt  Clock.h  CompensatedTS.h  DLLMain.cpp  DLLMain.h  DiscordRichPresence.cpp  Filesystem.cpp  Filesystem.h  GenericErrors.cpp  IPlayer.h  LobbyMember.h  Log.cpp  Log.h  ModeratorLogic.cpp  ModeratorLogic.h  PlayerList.h  PlayerStatus.h  SteamID.cpp  SteamID.h  TextureManager.cpp  UpdateManager.cpp  UpdateManager.h  Version.base.h  Version.cpp  WorldState.cpp  WorldState.h
tf2_bot_detector/Actions/: Actions.cpp  Actions.h  RCONActionManager.cpp  RCONActionManager.h
tf2_bot_detector/Config/: AccountAges.cpp  ChatWrappers.cpp  ConfigHelpers.cpp  ConfigHelpers.h  DRPInfo.cpp  PlayerListJSON.cpp  PlayerListJSON.h  Rules.cpp  Rules.h  Settings.cpp  Settings.h
tf2_bot_detector/ConsoleLog/: ConsoleLines.cpp  ConsoleLines.h  ConsoleLogParser.cpp  IConsoleLine.h  NetworkStatus.cpp
tf2_bot_detector/ConsoleLog/ConsoleLines/: ChatConsoleLine.cpp  ChatConsoleLine.h  ClientReachedServerSpawnLine.cpp  ClientReachedServerSpawnLine.h  ConfigExecLine.cpp  ConfigExecLine.h  ConnectingLine.cpp  ConnectingLine.h  CvarlistConvarLine.cpp  CvarlistConvarLine.h  DifferingLobbyReceivedLine.cpp  DifferingLobbyReceivedLine.h  EdictUsageLine.cpp  EdictUsageLine.h  GameQuitLine.cpp  GameQuitLine.h  GenericConsoleLine.cpp  GenericConsoleLine.h  HostNewGameLine.cpp  HostNewGameLine.h  InQueueLine.cpp  InQueueLine.h  KillNotificationLine.cpp  KillNotificationLine.h  LobbyChangedLine.cpp  LobbyChangedLine.h  LobbyHeaderLine.cpp  LobbyHeaderLine.h  LobbyMemberLine.cpp  LobbyMemberLine.h  LobbyStatusFailedLine.cpp  LobbyStatusFailedLine.h  PartyHeaderLine.cpp  PartyHeaderLine.h  PingLine.cpp  PingLine.h  QueueStateChangeLine.cpp  QueueStateChangeLine.h  SVCUserMessageLine.cpp  SVCUserMessageLine.h  (+20 more)
tf2_bot_detector/DB/: DBHelpers.cpp  TempDB.cpp  TempDB.h
tf2_bot_detector/GameData/: IPlayer.cpp  IPlayer.h  Player.cpp  Player.h  TFClassType.h  TFConstants.h
tf2_bot_detector/Launcher/: main.cpp
tf2_bot_detector/Networking/: GithubAPI.cpp  GithubAPI.h  HTTPClient.cpp  HTTPHelpers.cpp  LogsTFAPI.cpp  NetworkHelpers.cpp  SteamAPI.cpp  SteamAPI.h  SteamHistoryAPI.cpp  SteamHistoryAPI.h
tf2_bot_detector/Platform/: Platform.h
tf2_bot_detector/Platform/Linux/: LinuxHelpers.h  Platform.cpp  PlatformInstall.cpp  Processes.cpp  Shell.cpp  Steam.cpp
tf2_bot_detector/Platform/Windows/: CrashHandler.cpp  PlatformInstall.cpp  Processes.cpp  Windows.cpp
tf2_bot_detector/PlayerList/: PlayerAttribute.cpp  PlayerAttribute.h  PlayerList.cpp  PlayerList.h
tf2_bot_detector/PlayerList/Formats/: IPlayerListFileFormat.h  PlayerListJSONV3.cpp  PlayerListJSONV3.h
tf2_bot_detector/Renderer/: CMakeLists.txt  ITF2BotDetectorRenderer.h  d3d9.cpp  sdl2opengl.cpp  sdl2opengl.h
tf2_bot_detector/SetupFlow/: AddonManagerPage.cpp  ChatWrappersGeneratorPage.cpp  NetworkSettingsPage.cpp  NetworkSettingsPage.h  PermissionsCheckPage.cpp  TF2CommandLinePage.cpp  TF2CommandLinePage.h  UpdateCheckPage.cpp
tf2_bot_detector/Tests/: Catch2.cpp
tf2_bot_detector/UI/: ImGui_TF2BotDetector.cpp  ImGui_TF2BotDetector.h  MainWindow.Scoreboard.cpp  MainWindow.cpp  MainWindow.h  PlayerListManagementWindow.cpp  PlayerListManagementWindow.h  SettingsWindow.cpp  SettingsWindow.h
tf2_bot_detector/Util/: ImguiHelpers.h  PathUtils.cpp  ScopeGuards.h  TextUtils.cpp  TextUtils.h
tf2_bot_detector_common/: CMakeLists.txt
tf2_bot_detector_common/include/: ReleaseChannel.h
tf2_bot_detector_common/include/Platform/: PlatformCommon.h
tf2_bot_detector_common/src/Platform/Windows/: PlatformCommon.cpp
tf2_bot_detector_renderer/: CMakeLists.txt  ITF2BotDetectorDrawable.h  ITF2BotDetectorRenderer.h  ScopeGuards.cpp  ScopeGuards.h  d3d9.cpp  d3d9.h  imgui.ini  renderer.h  sdl2opengl.cpp  sdl2opengl.h
util/: compile_arch.sh  compile_ubuntu.sh  download_and_compile.bat
